Se completó la traducción del hero

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,6 +41,6 @@ if (HIVE_USERNAME) {
   <div class="container">
     <h1>{currentLocale.heroTitle.replace('@quigua', '@' + HIVE_USERNAME)}</h1>
     <p>{heroDescription}</p>
-    <a href="/posts" class="call-to-action">Explora Posts</a>
+    <a href="/posts" class="call-to-action">{currentLocale.heroButton}</a>
   </div>
 </section>
