--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const latestPosts = sortedPosts.slice(0, POST_SETTINGS.postsPerPage);
     </main>
     {/* INICIO DEL SIDEBAR */}
     <aside class="sidebar-column">
-      <h3>Categorías de Hive</h3>
+      <h3>{currentLocale.hiveCategories}</h3>
       <nav class="categories-nav">
         <ul>
           <li><a href="#">Tecnología</a></li>
