Cambio de categorías a Temas y Secciones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,10 +39,10 @@ const latestPosts = sortedPosts.slice(0, POST_SETTINGS.postsPerPage);
       <h3>{currentLocale.hiveCategories}</h3>
       <nav class="categories-nav">
         <ul>
-          <li><a href="#">Tecnología</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Tutoriales</a></li>
-          <li><a href="#">Noticias</a></li>
+          <li><a href="#">{currentLocale.splinterlands}</a></li>
+          <li><a href="#">{currentLocale.hivedBlogs}</a></li>
+          <li><a href="#">{currentLocale.hiveTutorials}</a></li>
+          <li><a href="#">{currentLocale.quiguaServices}</a></li>
         </ul>
       </nav>
       <div class="other-details-placeholder">
