--- a/src/pages/posts/reblogueados/[...page].astro
+++ b/src/pages/posts/reblogueados/[...page].astro
@@ -3,7 +3,8 @@ export const prerender = true;
 import { getCollection } from 'astro:content';
 import Layout from '../../../layouts/Layout.astro';
 import PostCard from '../../../components/PostCard.astro';
-import { POST_SETTINGS } from '../../../config/site';
+import { SITE_INFO, POST_SETTINGS } from '../../../config/site';
+import Breadcrumbs from '../../../components/Breadcrumbs.astro';
 
 export async function getStaticPaths({ paginate }) {
   const allPosts = await getCollection('blog', ({ data }) => {
@@ -16,9 +17,22 @@ export async function getStaticPaths({ paginate }) {
 }
 
 const { page } = Astro.props;
+
+const url = new URL(Astro.request.url);
+const langParam = url.searchParams.get('lang');
+const currentLang = langParam && SITE_INFO.locales[langParam] ? langParam : SITE_INFO.language;
+const currentLocale = SITE_INFO.locales[currentLang];
+
+const breadcrumbs = [
+  { label: currentLocale.home, href: '/' },
+  { label: currentLocale.rebloggedPosts, href: '/posts/reblogueados' }
+];
 ---
 
 <Layout title="Posts Reblogueados">
+  <Fragment slot="breadcrumbs">
+    <Breadcrumbs items={breadcrumbs} />
+  </Fragment>
   <div class="page-container">
     <main class="main-content">
       <h1>Posts Reblogueados</h1>
