--- a/src/pages/temas/[category]/[...page].astro
+++ b/src/pages/temas/[category]/[...page].astro
@@ -2,10 +2,17 @@
 import { getCollection } from 'astro:content';
 import Layout from '../../../layouts/Layout.astro';
 import PostCard from '../../../components/PostCard.astro';
-import { MAIN_CATEGORIES, POST_SETTINGS } from '../../../config/site';
+import { MAIN_CATEGORIES, POST_SETTINGS, SITE_INFO } from '../../../config/site';
 import SubcategorySidebar from '../../../components/SubcategorySidebar.astro';
+import Breadcrumbs from '../../../components/Breadcrumbs.astro';
 
 export const prerender = true;
+
+export interface Props {
+  categoryTitle: string;
+  page: any;
+  currentLocale: any;
+}
 
 export async function getStaticPaths({ paginate }) {
   const paths = MAIN_CATEGORIES.map(category => ({
@@ -33,10 +40,23 @@ export async function getStaticPaths({ paginate }) {
 }
 
 const { categoryTitle, page } = Astro.props;
+
+const url = new URL(Astro.request.url);
+const langParam = url.searchParams.get('lang');
+const currentLang = langParam && SITE_INFO.locales[langParam] ? langParam : SITE_INFO.language;
+const currentLocale = SITE_INFO.locales[currentLang];
+
+const breadcrumbs = [
+  { label: currentLocale.home, href: '/' },
+  { label: categoryTitle, href: `/temas/${categoryTitle.toLowerCase().replace(/ /g, '-')}/` }
+];
 ---
 
-<Layout title={`Posts de ${categoryTitle}`}>
-  <div class="page-container">
+<Layout title={`Posts de ${categoryTitle}`} currentLocale={currentLocale}>
+  <Fragment slot="breadcrumbs">
+    <Breadcrumbs items={breadcrumbs} />
+  </Fragment>
+    <div class="page-container">
     <main class="main-content">
       <h1>Posts de {categoryTitle}</h1>
       <div class="posts-grid">
@@ -51,6 +71,8 @@ const { categoryTitle, page } = Astro.props;
         {page.url.next && <a href={page.url.next} class="pagination-link next">Siguientes &raquo;</a>}
       </div>
     </main>
-    <SubcategorySidebar category={categoryTitle} />
+    <aside class="sidebar-column">
+      <SubcategorySidebar category={categoryTitle} />
+    </aside>
   </div>
 </Layout>
